# terminal_chess

./: Cargo.toml
domain/: Cargo.toml
domain/src/: board.rs  direction.rs  game.rs  insufficient_material.rs  lib.rs  player.rs  position.rs
domain/src/board/: board_state.rs  builder.rs  direction.rs  index.rs  mod.rs  position.rs
domain/src/game/: fen.rs  game_state.rs  insufficient_material.rs  mod.rs  piece_counter.rs  player.rs
domain/src/moves/: mod.rs  move_record.rs  moveable.rs  piece_move.rs
domain/src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  moveable.rs  pawn.rs  piece.rs  piece_types.rs  queen.rs  rook.rs
protocol/: Cargo.toml
protocol/src/: constants.rs  error.rs  lib.rs  packet.rs
server/: Cargo.toml
server/src/: game.rs  game_session.rs  global_state.rs  ids.rs  main.rs  matchmaker.rs
server/src/handlers/: game_request.rs  mod.rs  packet_handler.rs  registry.rs
tui/: Cargo.toml
tui/src/: app.rs  constants.rs  game.rs  main.rs  menu.rs  message_handler.rs  tui.rs
tui/src/application/: app.rs  game.rs  menu.rs  mod.rs
tui/src/handlers/: mod.rs
tui/src/handlers/commands/: back_to_main_menu.rs  command.rs  game.rs  main_menu.rs  mod.rs  promotion_menu.rs  quit.rs  registry.rs
tui/src/handlers/strategies/: game.rs  game_over.rs  main_menu.rs  mod.rs  promotion_menu.rs
tui/src/view/: board.rs  constants.rs  menu.rs  mod.rs  piece.rs  tui.rs  ui.rs
tui/src/widgets/: app_title.rs  board.rs  centered_rect.rs  game.rs  game_over.rs  menu.rs  mod.rs  piece.rs  promotion_menu.rs
