[workspace]
members = [
    "domain", 
    "tui", 
    "server", 
    "protocol",
]
resolver = "2"

[workspace.dependencies]
derive-new = "0.7.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
